@@ -1,6 +1,11 @@
 .TH "History For AdvanceSCAN" 1
 .SH NAME
 advscan \(hy History For AdvanceSCAN
+.SH ADVANCESCAN VERSION 1.16 2012/11 
+.PD 0
+.IP \(bu
+Removed zlib.dll. It\(cqs no more required.
+.PD
 .SH ADVANCESCAN VERSION 1.15 2012/11 
 .PD 0
 .IP \(bu
