@@ -1,6 +1,9 @@
 Name
 	advscan - History For AdvanceSCAN
 
+AdvanceSCAN Version 1.16 2012/11
+	) Removed zlib.dll. It's no more required.
+
 AdvanceSCAN Version 1.15 2012/11
 	) Fixed sampleof recognition. Now it works with recent MAME versions.
 
