@@ -5,6 +5,14 @@
 <body>
 <center><h2>History For AdvanceSCAN</h2></center>
 <h2> 
+AdvanceSCAN Version 1.16 2012/11
+</h2>
+<ul>
+<li>
+Removed zlib.dll. It's no more required.
+</li>
+</ul>
+<h2> 
 AdvanceSCAN Version 1.15 2012/11
 </h2>
 <ul>
