@@ -3,6 +3,12 @@
                             =======================
 
 
+ADVANCESCAN VERSION 1.16 2012/11
+================================
+
+* Removed zlib.dll. It's no more required.
+
+
 ADVANCESCAN VERSION 1.15 2012/11
 ================================
 
